// file: auth/proto/messages/session_metadata.proto
// version: 1.0.0
// guid: 01cd27dc-f07e-4fe5-805f-ff4fc49ef91b

edition = "2023";

package gcommon.v1.auth;

import "google/protobuf/go_features.proto";
import "auth/proto/session_state.proto";
import "auth/proto/location_info.proto";
import "web/proto/session_state.proto";
import "auth/proto/device_info.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/auth/proto";


message SessionMetadata {
  // Session ID
  string session_id = 1;

  // User ID
  string user_id = 2;

  // Session start time
  int64 started_at = 3;

  // Last activity time
  int64 last_activity = 4;

  // Session expiry time
  int64 expires_at = 5;

  // IP address
  string ip_address = 6;

  // User agent
  string user_agent = 7;

  // Device information
  DeviceInfo device_info = 8;

  // Location information
  LocationInfo location_info = 9;

  // Session state
  enum SessionState {
    SESSION_STATE_UNSPECIFIED = 0;
    SESSION_STATE_ACTIVE = 1;
    SESSION_STATE_IDLE = 2;
    SESSION_STATE_EXPIRED = 3;
    SESSION_STATE_TERMINATED = 4;
  }
  SessionState state = 10;
}
