// file: auth/proto/requests/verify2_fa_request.proto
// version: 1.0.0
// guid: fa64bc16-24a7-4b50-ba76-fc8fdd7079de

edition = "2023";

package gcommon.v1.auth;

import "google/protobuf/go_features.proto";
import "auth/proto/two_fa_type.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/auth/proto";


message Verify2FaRequest {
  // User ID
  string user_id = 1;

  // 2FA verification code
  string code = 2;

  // Type of 2FA being verified
  enum AuthTwoFaType {
    TWO_FA_TYPE_UNSPECIFIED = 0;
    TWO_FA_TYPE_TOTP = 1; // Time-based One-Time Password
    TWO_FA_TYPE_SMS = 2; // SMS code
    TWO_FA_TYPE_BACKUP = 3; // Backup code
  }
  AuthTwoFaType type = 3;
}
